[gd_scene load_steps=9 format=3 uid="uid://vpueeiysf855"]

[ext_resource type="Script" uid="uid://muut3gmsg30f" path="res://ui/inventory_ui/ItemsDisplayContainer.gd" id="1_cfrgu"]
[ext_resource type="Script" uid="uid://ovsslanxokvj" path="res://test/TestItemDrop.gd" id="1_laf7h"]
[ext_resource type="Script" uid="uid://bpcsenk3ubug2" path="res://inventory/ItemContainer.gd" id="2_laf7h"]
[ext_resource type="PackedScene" uid="uid://d1lk4lb1s31lu" path="res://items/Coif.tscn" id="3_2u32i"]
[ext_resource type="PackedScene" path="res://items/Jerkin.tscn" id="4_8lkq5"]
[ext_resource type="PackedScene" path="res://items/Shortbow.tscn" id="5_xuy0g"]
[ext_resource type="Script" uid="uid://jm3yoj5s1wvc" path="res://ui/inventory_ui/ItemDropArea.gd" id="6_2u32i"]
[ext_resource type="PackedScene" path="res://items/Shortsword.tscn" id="6_8a5t5"]

[node name="TestItemDrop" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_laf7h")

[node name="Inventory1Display" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_cfrgu")

[node name="Inventory1" type="Node" parent="Inventory1Display"]
unique_name_in_owner = true
script = ExtResource("2_laf7h")

[node name="Coif" parent="Inventory1Display/Inventory1" instance=ExtResource("3_2u32i")]

[node name="Jerkin" parent="Inventory1Display/Inventory1" instance=ExtResource("4_8lkq5")]

[node name="Label" type="Label" parent="Inventory1Display"]
layout_mode = 2
text = "Inventory 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemDropArea" type="Panel" parent="HBoxContainer" node_paths=PackedStringArray("item_container")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6_2u32i")
item_container = NodePath("../Inventory3Display")

[node name="Inventory3Display" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_cfrgu")

[node name="Inventory3" type="Node" parent="HBoxContainer/Inventory3Display"]
script = ExtResource("2_laf7h")

[node name="Label" type="Label" parent="HBoxContainer/Inventory3Display"]
layout_mode = 2
text = "Inventory 3"
horizontal_alignment = 1

[node name="Inventory2Display" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_cfrgu")

[node name="Inventory2" type="Node" parent="Inventory2Display"]
unique_name_in_owner = true
script = ExtResource("2_laf7h")

[node name="Shortbow" parent="Inventory2Display/Inventory2" instance=ExtResource("5_xuy0g")]

[node name="Shortsword" parent="Inventory2Display/Inventory2" instance=ExtResource("6_8a5t5")]

[node name="Label" type="Label" parent="Inventory2Display"]
layout_mode = 2
text = "Inventory 2"
horizontal_alignment = 1
